SERVER-48207 Vote requester should not succeed once cancelled.